--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <link href="https://fonts.googleapis.com/css?family=Alice" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -18,16 +19,96 @@
 <body>
     <div id="page-container">
         <div id="content-wrap">
-
-
             <div class="container">
                 <div class="div col">
                     <div class="jumbotron">
-                        <div class="row1"><button type="button" id="start-button" class="btn btn-secondary btn-lg btn-block">Click to enter the rabbit hole...</button><img src="https://gph.to/2VkAp9B" id="image-holder" style="display:none"></img></div>
+                        <div class="row1"><button type="button" id="start-button"
+                                class="btn btn-secondary btn-lg btn-block">Click to enter the rabbit hole...</button>
+                            <img src="https://gph.to/2VkAp9B" id="image-holder" style="display:none" /></div>
+                        <div id="timer" style="display:none">00:00</div>
+
+                        <form style="display:none" id="allQuestions">
+                            <div class="question1">
+                                <p><strong>Q1: Which character in Alice's Adventures in Wonderland was based on
+                                        the author, Lewis Carroll, himself?</strong></p>
+                                <label>
+                                    <input type="radio" name="one" value="a">The Walrus</label>
+                                <label>
+                                    <input type="radio" name="one" value="b">The White Rabbit</label>
+                                <label>
+                                    <input type="radio" name="one" value="c">The Dodo</label>
+                                <label>
+                                    <input type="radio" name="one" value="d">Bill the Lizard</label>
+                            </div>
+                            <p></p>
+                            <div class="question2">
+                                <p><strong>Q2: Lewis Carroll is a "pen-name." What is the author's real name?
+                                    </strong></p>
+                                <label>
+                                    <input type="radio" name="two" value="a">Louis Carroll</label>
+                                <label>
+                                    <input type="radio" name="two" value="b">Edgar Cuthwellis</label>
+                                <label>
+                                    <input type="radio" name="two" value="c">Charles Lutwidge Dodgson</label>
+                                <label>
+                                    <input type="radio" name="two" value="d">Edgar U. C. Westhill</label>
+                            </div>
+                            <p></p>
+                            <div class="question3">
+                                <p><strong>Q3: Alice's Adventures in Wonderland and Through the Looking Glass were both
+                                        banned in China. Why?</strong></p>
+
+
+                                <label>
+                                    <input type="radio" name="three" value="a">
+                                    Animals shouldn't use human
+                                    language
+                                </label>
+
+                                <label>
+                                    <input type="radio" name="three" value="b">
+                                    political bias</label>
+                                <label>
+                                    <input type="radio" name="three" value="c">drug references</label>
+                                <label>
+                                    <input type="radio" name="three" value="d">inappropriate imagery</label>
+                            </div>
+                            <p></p>
+                            <div class="question4">
+                                <p><strong>Q4: What sea creatures did the Walrus and the Carpenter eat?</strong></p>
+                                <label>
+                                    <input type="radio" name="four" value="a">clams</label>
+                                <label>
+                                    <input type="radio" name="four" value="b">oysters</label>
+                                <label>
+                                    <input type="radio" name="four" value="c">prawns</label>
+                                <label>
+                                    <input type="radio" name="four" value="d">crabs</label>
+                            </div>
+                            <p></p>
+                            <div class="question5">
+                                <p><strong>Q5: Which character said "We're all mad here. I'm mad. You're mad.”?</strong>
+                                </p>
+                                <label>
+                                    <input type="radio" name="five" value="a">The Mad Hatter</label>
+                                <label>
+                                    <input type="radio" name="five" value="b">The March Hare</label>
+                                <label>
+                                    <input type="radio" name="five" value="c">The Queen of Hearts</label>
+                                <label>
+                                    <input type="radio" name="five" value="d">The Cheshire Cat</label>
+                            </div>
+                            <input type="submit" id="finished" value="I'm finished!" />
+                            <div id="after-submit">
+                                <p id="number-correct"></p>
+                            </div>
+                        </form>
+
+
                     </div>
                 </div>
             </div>
-        
+
 
             <!-- all other page content -->
         </div>
@@ -35,7 +116,11 @@
         <footer id="footer">Erin J. Lyden | Copyright 2019</footer>
     </div>
 
+    <!-- jQuery -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="assets/javascript/app.js"></script>
+
+
 </body>
 
 </html>
